# stablemate

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  agents.yml  opencode.json  pyproject.toml
base-library/: Makefile  README.md  pyproject.toml
base-library/scaffolds/: shared-docs.yml
base-library/stablemate_library/: __init__.py
base-library/stablemate_library/scaffolds/: flutter-app.yml  go-service.yml  pulumi-infra.yml  react-router-web.yml  shared-docs.yml
base-library/stablemate_library/workflows/: README.md
base-library/stablemate_library/workflows/author/: workflow.yaml
base-library/stablemate_library/workflows/coder/: workflow.yaml
base-library/stablemate_library/workflows/okf-builder/: workflow.yaml
base-library/stablemate_library/workflows/research/: workflow.yaml
base-library/tests/: test_base_stands_alone.py
base-library/workflows/: README.md
base-library/workflows/author/: workflow.yaml
base-library/workflows/author/docs/: WORKFLOW.md  survey-intake-design.md
base-library/workflows/author/prompts/: audit-story.md  decompose-epics.md  (+9 more)
base-library/workflows/coder/: pytest.ini  workflow.yaml
base-library/workflows/okf-builder/: workflow.yaml
base-library/workflows/research/: workflow.yaml
core/: Makefile  README.md  pyproject.toml
core/stablemate_core/: __init__.py  base_cache.py  config.py  discovery.py  layout.py
core/tests/: conftest.py  test_base_cache.py  test_config_unified.py  test_discovery.py
farrier/: Makefile  README.md  agents.example.yml  pyproject.toml
farrier/docs/: LAYOUT.md
farrier/farrier/: __init__.py  cli.py  config.py  frontmatter.py  git.py  install.py  launcher.py  layers.py  naming.py  outputs.py  renderer.py  scaffolds.py  selection_errors.py  sources.py  workflows.py
farrier/tests/: conftest.py  test_agents_mk.py  test_config_resolution.py  test_copilot_open_skills.py  test_gitignore_migration.py  test_makefile_include.py  test_provenance_banner.py  test_scaffold_command.py  test_selection_misses.py  test_skill_lookup_prefix_fallback.py  test_source_command.py
groom/: Makefile  README.md  pyproject.toml
groom/.superdesign/: design-system.md  groom-ide.html
groom/groom/: __init__.py  a11y_lint.py  alerts.py  app.py  cli.py  discovery.py  docker_io.py  gates.py  models.py  notify.py  otlp.py  render.py  sidecar.py  sidecar_hub.py  state.py  store.py
groom/groom/assets/: dashboard.css
groom/groom/templates/: dashboard.html
groom/tests/: test_a11y_lint.py  test_app.py  test_discovery.py  test_docker_io.py  test_gates.py  test_render.py  test_sidecar.py  test_sidecar_hub.py  test_sidecar_session.py  test_state.py  test_telemetry.py
ostler/: Makefile  README.md  SPEC.md  pyproject.toml
ostler/docs/: ARTIFACT-CONTRACTS.md  QA-RUN.md  VET.md
ostler/ostler/: __init__.py  api.py  backlog.py  cli.py  coverage.py  crud.py  crud_generic.py  doctor.py  dynamic_registry.py  edit.py  fmt.py  freeze.py  graph.py  ids.py  inventory.py  links.py  markdown.py  model.py  path.py  query.py  reach.py  registry.py  scaffold.py  schemas.py  select.py  templates.py  todo.py  trace.py
ostler/ostler/artifact/: __init__.py  kinds.py  run.py
ostler/ostler/qa/: __init__.py  context.py  drivers.py  manifest.py  plan.py  run.py  session.py  v2.py
ostler/ostler/schema/: epic.schema.json  feature.schema.json  ids.schema.json  knowledge-record.schema.json  story.schema.json
ostler/ostler/scripts/: okf_migrate.py
ostler/ostler/vet/: __init__.py  cdp.py  crop.py  geometry.py  manifest.py  regions.py  register.py  report.py  run.py
ostler/tests/: conftest.py  test_api.py  test_artifact_kinds.py  test_cli.py  test_cli_integration.py  test_coverage.py  test_crud.py  test_crud_generic.py  test_crud_spec.py  test_doctor.py  test_dynamic_registry.py  test_edit.py  test_freeze.py  test_ids.py  test_inventory.py  test_markdown_tree.py  test_migrate.py  test_model_trace.py  test_path.py  test_qa_context.py  test_qa_v2.py  test_query_select.py  test_surfaces.py  test_template_apply.py  test_templates.py  test_ui_doctor.py  test_ui_fmt.py  test_ui_graph.py  test_ui_links_trace.py  test_ui_profile.py  test_ui_reach.py  test_ui_scaffold.py  test_vet_cdp.py  test_vet_cli.py  test_vet_crop.py  test_vet_geometry.py  test_vet_manifest.py  test_vet_regions.py  test_vet_register.py  test_vet_report.py
saddlebag/: README.md  pyproject.toml
saddlebag/saddlebag/: __init__.py  cli.py  context.py  db.py  envfile.py  manifest.py  models.py  render.py  selector.py  store.py  workhorse.py
saddlebag/tests/: conftest.py  test_cli.py  test_context.py  test_db.py  test_env_cli.py  test_env_db.py  test_envfile.py  test_manifest.py  test_render.py  test_selector.py  test_store.py  test_workhorse.py
workhorse/: CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
workhorse/docs/: DOCKER.md  GUARDRAILS.md  WORKFLOW.md
workhorse/tests/: conftest.py  test_agent_cap.py  test_agent_recovery.py  test_backends.py  test_branch_guardrail.py  test_call_node.py  test_context_manifest.py  test_dot.py  test_flavor_render.py  test_flows.py  test_forbid_shell.py  test_gas_tank.py  test_guardrails.py  test_idempotency.py  test_json_parse.py  test_library_layers.py  test_logsetup.py  test_main_profile.py  test_model_resolution.py  test_node_timeout.py  test_otel.py  test_profiles.py  test_requirements.py  test_resume_auto.py  test_script_inprocess.py  test_scriptutil_workspace.py  test_stream_subprocess.py  test_templates_resilient.py  test_workflow_resolution.py
workhorse/tooling/openrouter-cache/: .env.example  README.md  compose.litellm.yaml  litellm-config.yaml  pin_proxy.py  run-workflow.sh  setup-codex-profile.sh  verify_cache.py  workhorse-profiles.yaml
workhorse/workhorse/: __init__.py  artifacts.py  builtins.py  config.py  config_run.py  logsetup.py  main.py  otel.py  requirements.py  scriptutil.py  templates.py  testing.py
workhorse/workhorse/graph/: context.py  dot.py  loader.py  nodes.py
workhorse/workhorse/runner/: agent.py  backends.py  branch.py  call.py  profiles.py  script.py
(+659 files in other folders)
