# stablemate — a uv workspace housing the publishable packages that work
# alongside the prompt library:
#   - workhorse/  -> workhorse-agent  (the fail-soft workflow runtime)
#   - farrier/    -> farrier          (renders the prompt library into a repo)
#   - ostler/     -> ostler           (tends a repo's docs/ knowledge graph)
#   - groom/      -> groom            (local dashboard + push notifications for
#                                       workhorse operator gates)
#   - saddlebag/  -> saddlebag        (runtime credential pool: scan, select,
#                                       lease and release test identities)
#
# The prompt-library *content* itself lives in a separate repository; farrier is
# pointed at it via `farrier config set-library <path>`.
#
# This root is the workspace anchor and a member (per uv's "every workspace needs
# a root, which is also a workspace member"). It declares [project] but NO
# [build-system], so — per the uv docs — uv "will not attempt to build or install
# the project itself, just its dependencies". It is never published; the member
# packages are built and released independently.

[project]
name = "stablemate"
version = "0.0.0"
description = "Workspace anchor for the workhorse-agent, farrier, ostler, groom and saddlebag packages (not published)."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["workhorse", "farrier", "ostler", "groom", "saddlebag"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.20",
    # ostler vet's live path (`--cdp-url` CDP scan + per-component crops), used by the
    # okf-builder walkthrough that runs against this workspace's .venv.
    "playwright>=1.40",
    "pillow>=10.0",
    # workhorse's opt-in `otel` extra, pinned here so the dev venv can run the
    # producer→groom-collector path end-to-end (production installs opt in via
    # `pip install 'workhorse-agent[otel]'`).
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
