# stablemate — a uv workspace housing the publishable packages that work
# alongside the prompt library:
#   - workhorse/  -> workhorse-agent  (the fail-soft workflow runtime)
#   - farrier/    -> farrier          (renders the prompt library into a repo)
#   - ostler/     -> ostler           (tends a repo's docs/ knowledge graph)
#   - groom/      -> groom            (local dashboard + push notifications for
#                                       workhorse operator gates)
#   - saddlebag/  -> saddlebag        (runtime credential pool: scan, select,
#                                       lease and release test identities)
#   - core/       -> stablemate-core    (shared plumbing: the home config, base-library
#                                       discovery, the base-library cache)
#
# base-library/ is NOT a package and NOT a workspace member: it is the base library
# itself — plain data (library/, scaffolds/, workflows/) that the tools locate on disk
# or fetch from git into ~/.cache/stablemate. Nothing imports it.
#
# Library content resolves across two layers: the base (base-library/, above) and an
# optional private overlay that shadows it, pointed at with
# `farrier config set-library <path>`. The base is data with nothing to import, so no
# dependency runs in either direction — which is what lets content version on its own
# clock. Each workflow.yaml declares the tools it needs in a `requires:` block instead.
#
# This root is the workspace anchor and a member (per uv's "every workspace needs
# a root, which is also a workspace member"). It declares [project] but NO
# [build-system], so — per the uv docs — uv "will not attempt to build or install
# the project itself, just its dependencies". It is never published; the member
# packages are built and released independently.

[project]
name = "stablemate"
version = "0.0.0"
description = "Workspace anchor for the workhorse-agent, farrier, ostler, groom and saddlebag packages (not published)."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["core", "workhorse", "farrier", "ostler", "groom", "saddlebag"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    # The coder workflow's suite drives the real workhorse CLI as a subprocess per
    # node, so it is CPU-bound and shards across cores (`addopts = -n auto` in
    # base-library/.../workflows/coder/pytest.ini). Came in with the workflows.
    "pytest-xdist>=3.6",
    "ruff>=0.15.20",
    # ostler vet's live path (`--cdp-url` CDP scan + per-component crops), used by the
    # okf-builder walkthrough that runs against this workspace's .venv.
    "playwright>=1.40",
    "pillow>=10.0",
    # workhorse's opt-in `otel` extra, pinned here so the dev venv can run the
    # producer→groom-collector path end-to-end (production installs opt in via
    # `pip install 'workhorse-agent[otel]'`).
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

# One ruleset for every subproject — ruff is run from this root (`ruff check .`),
# so member packages deliberately carry no [tool.ruff] of their own.
[tool.ruff.lint]
# `extend-select` so ruff's defaults (E4/E7/E9/F) stay on.
extend-select = [
    "TID252",   # relative-imports
]

[tool.ruff.lint.flake8-tidy-imports]
# Every import names its package from the root: `from ostler.model import Graph`,
# never `from .model import Graph`. "all" also bans the single-dot sibling form,
# which the default ("parents") permits. A relative import only resolves when the
# module is imported as part of its package, and it hides which package a name
# comes from — see the python-cli skill.
ban-relative-imports = "all"
