[project]
name = "stablemate-library"
version = "0.1.0"
description = "The stablemate base library: the workflows, scaffolds and toolchain skills that farrier renders and workhorse runs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["agent", "prompts", "skills", "workflows", "stablemate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]

# The dependency runs library -> tools, never the reverse. The workflows shipped
# here invoke the `ostler`, `workhorse` and `farrier` CLIs, so this package is the
# one that knows which tool versions its content needs, and it pins them. The tools
# must NOT depend back on this package (they discover it with an optional import) —
# that is what keeps the graph acyclic and lets content version on its own clock.
#
# Installing this package is therefore the batteries-included entry point: it pulls
# the engines *and* the workflows that drive them, at versions known to work together.
dependencies = [
  "workhorse-agent>=0.8.0",
  "farrier>=1.6.0",
  "ostler>=0.1.0",
]

[tool.uv.sources]
workhorse-agent = { workspace = true }
farrier = { workspace = true }
ostler = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling includes every file under the package dir, not just *.py — which is the
# point: the payload is markdown and YAML (the certifi/tzdata pattern).
[tool.hatch.build.targets.wheel]
packages = ["stablemate_library"]

[tool.hatch.build.targets.sdist]
include = ["stablemate_library", "README.md", "LICENSE"]
