[project]
name = "farrier"
version = "0.1.6"
description = "Render an agent-neutral prompt library into a repository's Codex/Claude/Copilot adapters."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["agent", "prompts", "skills", "claude", "codex", "copilot", "installer"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "platformdirs>=4",
]

[project.urls]
Homepage = "https://github.com/GabrielCpp/stablemate"
Repository = "https://github.com/GabrielCpp/stablemate"
Issues = "https://github.com/GabrielCpp/stablemate/issues"

[project.scripts]
farrier = "farrier.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["farrier"]

[tool.hatch.build.targets.sdist]
include = ["farrier", "README.md", "LICENSE", "agents.example.yml", "docs"]
