[project]
name = "ostler"
version = "0.1.0"
description = "Define, validate, search and mutate a repository's markdown knowledge graph (OKF profile: epics, stories, seeds, knowledge, features)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["docs", "knowledge", "epics", "stories", "validation", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "markdown-it-py>=3.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "playwright>=1.40"]
vet = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/GabrielCpp/stablemate"
Repository = "https://github.com/GabrielCpp/stablemate"
Issues = "https://github.com/GabrielCpp/stablemate/issues"

[project.scripts]
ostler = "ostler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ostler"]

[tool.hatch.build.targets.sdist]
include = ["ostler", "README.md", "SPEC.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
