[project]
name = "saddlebag"
version = "0.1.0"
description = "Runtime credential pool for agent workflows — scan, select, lease and release test identities without touching a secret."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["credentials", "secrets", "keyring", "vault", "agents", "workflow", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = [
  # The OS keyring is the default secret store: Keychain on macOS, Credential
  # Manager on Windows, Secret Service on Linux. Secrets are namespaced by the
  # `saddlebag` service name — the only scoping mechanism the cross-OS API has.
  "keyring>=25.0",
  # Locates the pool database in each OS's conventional user-data directory
  # (Application Support on macOS, %LOCALAPPDATA% on Windows, XDG on Linux).
  "platformdirs>=4.0",
  # The environment manifest: the checkable-in YAML that lets an environment
  # travel off the machine it was defined on. Config only — never a secret value.
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# For hosts with no OS keyring — containers, CI, headless servers.
vault = ["hvac>=2.0"]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/GabrielCpp/stablemate/tree/main/saddlebag"
Repository = "https://github.com/GabrielCpp/stablemate"
Issues = "https://github.com/GabrielCpp/stablemate/issues"

[project.scripts]
saddlebag = "saddlebag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saddlebag"]

[tool.hatch.build.targets.sdist]
include = ["saddlebag", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
