[project]
name = "workhorse-agent"
version = "0.2.0"
description = "Fail-soft runner for YAML-defined agent workflows — drives the Claude CLI through a workflow graph unattended for days."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["agent", "workflow", "claude", "llm", "automation", "orchestration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/GabrielCpp/stablemate"
Repository = "https://github.com/GabrielCpp/stablemate"
Issues = "https://github.com/GabrielCpp/stablemate/issues"

[project.scripts]
workhorse = "workhorse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workhorse"]

[tool.hatch.build.targets.sdist]
include = ["workhorse", "README.md", "LICENSE", "docs"]
