[project]
name = "workhorse-agent"
version = "0.8.0"
description = "Fail-soft runner for YAML-defined agent workflows — drives the Claude CLI through a workflow graph unattended for days."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Côté" }]
keywords = ["agent", "workflow", "claude", "llm", "automation", "orchestration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "json-repair>=0.30",
  "gitpython>=3.1",
  "PyGithub>=2.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
# pytest-xdist: the workflow integration suites (e.g. the coder workflow's tests,
# which drive the real CLI as a subprocess per test) are subprocess/CPU-bound and
# shard cleanly across cores — their pytest.ini sets `-n auto`, which needs xdist.
test = ["pytest>=8.0", "pytest-xdist>=3.0"]

[project.urls]
Homepage = "https://github.com/GabrielCpp/stablemate/tree/main/workhorse"
Repository = "https://github.com/GabrielCpp/stablemate"
Issues = "https://github.com/GabrielCpp/stablemate/issues"

[project.scripts]
workhorse = "workhorse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workhorse"]

[tool.hatch.build.targets.sdist]
include = ["workhorse", "README.md", "LICENSE", "docs"]
